# mcp-worklog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_worklog/: __init__.py  main.py
src/mcp_worklog/adapters/: __init__.py
src/mcp_worklog/adapters/inbound/: __init__.py  mcp_server.py
src/mcp_worklog/adapters/outbound/: __init__.py  storage.py
src/mcp_worklog/adapters/outbound/session_collectors/: __init__.py  claude_code.py  cursor.py  kiro.py
src/mcp_worklog/application/: __init__.py  models.py  ports.py  service.py  session_ports.py
src/mcp_worklog/domain/: __init__.py  formatter.py  models.py  session.py
tests/: test_properties.py  test_storage.py
